[package]
name = "utils-rs"
version = "0.3.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.143", optional = true }
serde_yml = { version = "0.0.12", optional = true }
thiserror = "2.0.16"
toml = { version = "0.9.5", optional = true }

[features]
serde = ["dep:serde", "dep:serde_yml", "dep:toml", "dep:serde_json"]
